--- a/razorpagesExample/Pages/Employees/Index.cshtml
+++ b/razorpagesExample/Pages/Employees/Index.cshtml
@@ -1,21 +1,44 @@
 @page
 @using Microsoft.AspNetCore.Mvc.RazorPages
+@using razorpagesExample.Repository
+@using razorpagesExample.Models
 @model IndexModel
 @{
     ViewData["Title"] = "Employees";
 }
 
 <h1>Employees</h1>
-<p>@Model.Message</p>
+<div class="row">
+    @foreach (var emp in Model.EmployeeList)
+    {
+        <div class="col-md-3 mb-2">
+            <div class="card">
+                <img src="~/img/@emp.Photo" alt="" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">@emp.Name</h5>
+                    <p class="card-text">@emp.Department</p>
+                    <a href="#" class="btn btn-primary">Details</a>
+                </div>
+            </div>
+        </div>
+    }
+</div>
 
 @functions
 {
     public class IndexModel : PageModel
     {
-        public string Message { get; set; } = string.Empty;
+        public IEnumerable<Employees> EmployeeList = new List<Employees>();
+
+        private readonly IEmployeeRepository _employeeRepository;
+
+        public IndexModel (IEmployeeRepository employeeRepository )
+        {
+            _employeeRepository = employeeRepository;
+        }
         public void OnGet()
         {
-            Message = "Welcome to the Employees page!";
+            EmployeeList = _employeeRepository.GetAll();
         }
     }
 }
