--- a/razorpagesExample/Pages/Employees/Index.cshtml
+++ b/razorpagesExample/Pages/Employees/Index.cshtml
@@ -1,4 +1,4 @@
-@page "{list}"
+@page 
 @using Microsoft.AspNetCore.Mvc.RazorPages
 @using razorpagesExample.Repository
 @using razorpagesExample.Models
@@ -17,7 +17,7 @@
                 <div class="card-body">
                     <h5 class="card-title">@emp.Name</h5>
                     <p class="card-text">@emp.Department</p>
-                    <a href="#" class="btn btn-primary">Details</a>
+                    <a asp-page="/employees/details" asp-route-id="@emp.Id" class="btn btn-primary">Details</a>
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@
 {
     public class IndexModel : PageModel
     {
-        public IEnumerable<Employees> EmployeeList = new List<Employees>();
+        public IEnumerable<Employee> EmployeeList = new List<Employee>();
 
         private readonly IEmployeeRepository _employeeRepository;
 
