Create Page and Methods Added, Final Commit

--- a/razorpagesExample/Pages/Employees/Index.cshtml
+++ b/razorpagesExample/Pages/Employees/Index.cshtml
@@ -30,16 +30,17 @@
     public class IndexModel : PageModel
     {
         public IEnumerable<Employee> EmployeeList = new List<Employee>();
-
-        private readonly IEmployeeRepository _employeeRepository;
-
-        public IndexModel (IEmployeeRepository employeeRepository )
-        {
-            _employeeRepository = employeeRepository;
-        }
-        public void OnGet()
-        {
-            EmployeeList = _employeeRepository.GetAll();
+            
+            private readonly IEmployeeRepository _employeeRepository;
+            
+            public IndexModel (IEmployeeRepository employeeRepository )
+            {
+                _employeeRepository = employeeRepository;
+            }
+            public void OnGet()
+            {
+                EmployeeList = _employeeRepository.GetAll();
+            }
         }
     }
-}
+    <a asp-page="/Employees/Create"  type="submit" class="btn btn-secondary mt-5">Create</a>
